--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Dave Gray",
   "license": "ISC",
   "engines": {
-    "node": "14.x"
+    "node": ">=20.x"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -29,4 +29,3 @@
     "nodemon": "^2.0.12"
   }
 }
-
