--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "MongoDB tutorial",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "node server.js",
     "dev": "nodemon server",
-    "vercel-build": "echo hello",
+    "vercel-build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dave Gray",
