--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "15tut",
   "version": "1.0.0",
   "description": "MongoDB tutorial",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server",
-    "vercel-build": "npm install",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "vercel-build": "npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dave Gray",
