--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "MongoDB tutorial",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "vercel-build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
